--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Ananya Pic-modified.png" alt="Ananya Pic"></td>
+      <td><img src="Images/Ananya Pic-modified.png" alt="Ananya Pic"></td>
       <td>
         <h1>Ananya Rohith</h1>
         <p><em>Founder of <strong>Testiton</strong></em></p>
